--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Jelenleg az űrben</title>
 </head>
 <body>
+    <h1> 👨‍🚀Jelenleg az űrben</h1>
+    <div><span id="astronauts"></span> fő tartózkodik</div>
+    <select id="countrySelect">
+        
+    </select>
+
     <script src="script.js"></script>
 </body>
 </html>
