--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <div class="info-bar">
-            <span id="people-count">Űrben tartózkodók száma: <strong>0</strong></span>
+            <span>Űrben tartózkodók száma: <strong id="emberek">0</strong></span>
             <select id="station-filter">
                 <option value="all">Összes űrállomás</option>
             </select>
